# test_workspace

./: CMakeLists.txt  conanfile.ttlock  configure.sh  layout.ini  workspace.yml
test_project/: CMakeLists.txt  conanfile.py
test_project/include/: test.h
test_project/src/: test.cpp
